Created menu entries for the Journey and Emotion selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Emotion Wheel</string>
     <string name="start">Start</string>
     <string name="emotion_journey_empty">You have no saved emotion journeys yet. Have you tried clicking on one emotion from the list until there\'s only the last one left?</string>
+    <string name="emotion_list_menu_option">Find What You Feel</string>
+    <string name="emotion_journey_list_menu_option">See What You Felt Before</string>
 </resources>
